python-graph
A library for working with graphs in Python
--------------------------------------------------------------------------------

CHANGELOG


Release 1.7.0	[??? ??, 2010]

Enhancements:
	Added equality test for graphs, digraphs and hypergraphs;
	Added has_edge() and has_hyperedge() methods to hypergraph objects.

Fixes:
	Adding an edge with a label to a digraph now works again;
	Deleting an edge of a hypergraph now deletes its attributes;
	Node attributes on hypergraphs work now.


Release 1.6.3	[Dec 13, 2009]

Enhancements:
	Added Python3 support (support for Python 2.5 and lower was dropped).

Fixes:
	Adding a graph to a digraph now works (Issue 39);
	Fixed the reading of graphs and digraphs stored in XML.

Important API Changes:
	Edges are now passed around as generic objects. In the case of graph / digraph this is a tuple;
	Removed traversal() method from graph and digraph classes;
	Removed accessibility, connected_components, cut_nodes and cut_hyperedges from hypergraph class;
	Functions for reading a hypergraph doesn't take an empty hypergraph as argument anymore.


Release 1.6.2	[Sep 30, 2009]

Important API Changes:
	Adding an arrow to an non existing node on a digraph now fails sanely (Issue 35);
	Adding an already added node to a graph or digraph now raises an exception (AdditionError);
	Adding an already added edge to a graph or digraph now raises an exception (AdditionError);
	pygraph.classes.Classname.classname classes were renamed to pygraph.classes.classname.classname;
	pygraph.algorithms.filters.Filtername.filtername filters were renamed to pygraph.algorithms.filters.filtername.filtername;
	pygraph.algorithms.heuristics.Heuristicname.heuristicname heuristics were renamed to pygraph.algorithms.heuristics.heuristicname.heuristicname;
	hypergraph's read() and write() methods were removed. 


Release 1.6.1	[Jul 04, 2009]

Enhancements:
	Added reverse method to the digraph class.

Important API Changes: